Addresses issue by top-aligning table cells on mobile

--- a/source/stylesheets/_tables.scss
+++ b/source/stylesheets/_tables.scss
@@ -27,4 +27,8 @@ tr,
 td,
 th {
   vertical-align: middle;
+
+  @include media($mobile) {
+    vertical-align: top;
+  }
 }
